# VoiceLine

./: .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt  setup.py  test_speak.py
scripts/: extend_frequency.py  seed_library.py  seed_tts_library.py
scripts/_archived/: reslice_clips.py  seed_tedlium.py
src/voice_line/: __init__.py  analyzer.py  assembler.py  cli.py  config.py  db.py  effects.py  engine.py  frequency.py  indexer.py  tts_fallback.py
src/voice_line/_archived/: indexer.py
voice_line/: cli.py  config.py  db.py  effects.py  engine.py  frequency.py  indexer.py
